# CppTask_2

./: CMakeLists.txt  README.md  button.cpp  button.h  component.cpp  component.h  label.cpp  label.h  line.cpp  line.h  list.cpp  list.h  main.cpp  panel.cpp  panel.h  window.cpp  window.h
